# fish-rule

./: .env.docker  .env.docker.env  .env.example  .gitignore  .pyrightconfig.json  Dockerfile  README.md  dev.sh  docker-compose.yml  pyproject.toml  run.sh
src/application/: exceptions.py  validators.py
src/application/helpers/: pagination.py
src/application/interactors/: login_user.py
src/application/interfaces/: base_repository.py  file.py  identity_provider.py  session_repository.py  user_repository.py
src/domain/: constants.py
src/domain/entities/: file.py  session.py  user.py
src/infrastructure/adapters/: session_id_generator.py  session_identity_provider.py
src/infrastructure/database/migrations/versions/: 50e26225ff2c_.py  7d7d109797e0_add_file.py  e348fabad635_add_deleted_at_and_user_id_to_files.py
src/infrastructure/database/repositories/: file.py  session.py  user.py
src/infrastructure/database/tables/: file.py  map.py  session.py  user.py
src/main/: app.py  config.py
src/main/ioc/providers/: interactor.py  repository.py
src/presentation/: constants.py  exceptions.py
src/presentation/controllers/: auth.py
src/presentation/controllers/users/: auth_user.py
